--- a/ignite-call/package.json
+++ b/ignite-call/package.json
@@ -12,15 +12,22 @@
     "@hookform/resolvers": "^2.9.10",
     "@ignite-ui/react": "^2.2.4",
     "@next/font": "13.1.2",
+    "@prisma/client": "^4.9.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.3",
     "next": "13.1.2",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
     "typescript": "4.9.4",
     "zod": "^3.20.2"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "prisma": "^4.9.0"
   }
 }
