--- a/ignite-call/package.json
+++ b/ignite-call/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
+    "dayjs": "^1.11.7",
     "next": "13.1.2",
     "next-auth": "^4.18.8",
     "nookies": "^2.5.2",
